# spoon-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  NEXT_SESSION.md  README.md
Editor/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt
Engine/Include/SpoonEngine/: SpoonEngine.h
Engine/Include/SpoonEngine/Assets/: AssetManager.h  Mesh.h  Model.h  ModelLoader.h  SceneSerializer.h  Texture.h
Engine/Include/SpoonEngine/Components/: Transform.h
Engine/Include/SpoonEngine/Core/: Application.h  Input.h  Window.h
Engine/Include/SpoonEngine/ECS/: Component.h  Entity.h  System.h  World.h
Engine/Include/SpoonEngine/Editor/: EditorLayer.h
Engine/Include/SpoonEngine/Math/: Matrix4.h  Vector2.h  Vector3.h  Vector4.h
Engine/Include/SpoonEngine/Renderer/: Buffer.h  Camera.h  Framebuffer.h  Material.h  Renderer.h  Shader.h
Engine/Include/SpoonEngine/Renderer/OpenGL/: OpenGLBuffer.h  OpenGLFramebuffer.h  OpenGLRenderer.h  OpenGLShader.h  OpenGLTexture.h
Engine/Include/SpoonEngine/Systems/: RenderSystem.h
Engine/Source/Assets/: AssetManager.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  SceneSerializer.cpp  Texture.cpp
Engine/Source/Core/: Application.cpp  Input.cpp  Window.cpp
Engine/Source/ECS/: Component.cpp  Entity.cpp  System.cpp  World.cpp
Engine/Source/Editor/: EditorLayer.cpp
Engine/Source/Math/: Matrix4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Engine/Source/Renderer/: Buffer.cpp  Camera.cpp  Framebuffer.cpp  Material.cpp  Renderer.cpp  Shader.cpp
Engine/Source/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLFramebuffer.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
Engine/Source/Systems/: RenderSystem.cpp
Examples/: CMakeLists.txt
Examples/BasicExample/: main.cpp
Examples/CubeExample/: main.cpp
Examples/ModelLoadingExample/: main.cpp
Examples/ShadowMappingExample/: main.cpp
Examples/TexturedCubeExample/: main.cpp
scenes/: scene10.spoon  scene3.spoon  test_manual.spoon
